# Uni

./: .gitignore  we test exam
aalborg/gnuplots/: delta-vs-len.p
aalborg/nice-plot-data/: to-png.p
eclipse-workspace/.metadata/: version.ini
gnuplots/: get-latest-log.sh  step-len.p  sum.p
gnuplots/2018-05-15_10:15:19-Pixel/: sum.p
gnuplots/2018-05-15_15:02:22-Marands_Hua/: split.p  sum.p
gnuplots/2018-05-15_15:10:00-Marands_Hua/: sum.p
gnuplots/2018-05-15_15:57:47-Marands_Hua/: sum.p
gnuplots/2018-05-17_10:21:43-Pixel/: sum.p
gnuplots/2018-05-17_14:02:17-Marands_Hua/: sum.p
gnuplots/2018-05-21_11:01:24-Marands_Hua/: sum.p
gnuplots/2018-05-21_11:59:37-Pixel/: sum.p
gnuplots/2018-05-21_14:17:09-Marands_Hua/: sum.p
gnuplots/2018-05-21_14:21:25-Pixel/: sum.p
gnuplots/2018-05-21_17:07:25-Marands_Hua/: sum.p
gnuplots/2018-05-21_18:05:32-Marands_Hua/: sum.p
gnuplots/2018-05-22_11:58:22-Marands_Hua/: sum.p
pp/: firstracket~  lec2  lec3_2  lec3_3  lec5_1  lec5_1~
pp/haskell/: lec1  (+1 more)
pp/haskell/minproj-two/: README.md  bs  bt  minproj-two.cabal  old.hs  s  t  thomasio.hs  thomaskode.hs
pp/haskell/minproj-two/d/: bs  t
pp/haskell/minproj-two/marand13/Program/: main  minproj-two.cabal  test.sh
pp/haskell/minproj-two/marand13/Program/src/: HappyParser.y  Main.hs
pp/haskell/minproj-two/marand13/Program/test/: t1  t12  t13  t2  t3  t4  t5  t8  t9
pp/haskell/minproj-two/src/: AlexToken.x  Expr.hs  HappyParser.y  Main.hs  Main.x  Parser.hs  Tokens.hs  file.hs
pp/haskell/minproj-two/test/: t1  t10  t11  t12  t13  t2  t3  t4  t5  t7  t8  t9
(+146 files in other folders)
