name:                minproj-two
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/minproj-two#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable minproj-two
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Parser, Tokens
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       array >=0.5
  build-tools:         alex
  default-language:    Haskell2010